force-app/main/default/objects/Opportunity/fields/ActionItemType__c.field-meta.xml
<CustomField>
    <fullName>ActionItemType__c</fullName>
    <label>Action Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission Upgrade</fullName>
            </value>
            <value>
                <fullName>Delivery Area</fullName>
            </value>
            <value>
                <fullName>Delivery Fee</fullName>
            </value>
            <value>
                <fullName>Delivery Time</fullName>
            </value>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Fail Rate</fullName>
            </value>
            <value>
                <fullName>Joker</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>MOV</fullName>
            </value>
            <value>
                <fullName>Premium Listing</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Transmission Method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>