force-app/main/default/objects/Opportunity/fields/addon_Specification__c.field-meta.xml
<CustomField>
    <fullName>addon_Specification__c</fullName>
    <description>SP-1691 Migration Batch for DE</description>
    <label>addon Specification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>