force-app/main/default/objects/Opportunity/fields/addon_startdate__c.field-meta.xml
<CustomField>
    <fullName>addon_startdate__c</fullName>
    <description>SP-1691 Migration batch DE</description>
    <label>addon startdate</label>
    <type>Date</type>
</CustomField>