force-app/main/default/objects/Opportunity/fields/Asset_Installment_migration__c.field-meta.xml
<CustomField>
    <fullName>Asset_Installment_migration__c</fullName>
    <label>Asset Installment migration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>