force-app/main/default/objects/Opportunity/fields/AssetPrice_migration__c.field-meta.xml
<CustomField>
    <fullName>AssetPrice_migration__c</fullName>
    <label>AssetPrice_migration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>