force-app/main/default/objects/Opportunity/fields/AsynchJobId__c.field-meta.xml
<CustomField>
    <fullName>AsynchJobId__c</fullName>
    <label>AsynchJobId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>