force-app/main/default/objects/Opportunity/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Owner Change</fullName>
            </value>
            <value>
                <fullName>Franchise Extension</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
            <value>
                <fullName>Upgrade/Upsell</fullName>
            </value>
            <value>
                <fullName>Complementary Contract</fullName>
            </value>
            <value>
                <fullName>Legal Form Change</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>