force-app/main/default/objects/Opportunity/fields/Commi__c.field-meta.xml
<CustomField>
    <fullName>Commi__c</fullName>
    <description>Commission from Old SF, For Migration Only</description>
    <label>Commission_AU</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>