force-app/main/default/objects/Opportunity/fields/Contract_Channel__c.field-meta.xml
<CustomField>
    <fullName>Contract_Channel__c</fullName>
    <description>This field is to check from which channel we have made a contract</description>
    <label>Contract Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01. Direct Call or Visit from Yogiyo (Only In Lead)</fullName>
            </value>
            <value>
                <fullName>02. Owner Change Case</fullName>
            </value>
            <value>
                <fullName>03. Contract Request Case</fullName>
            </value>
            <value>
                <fullName>04. Recommendation</fullName>
            </value>
            <value>
                <fullName>05. Direct Contact from Rest. Owner (not case)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>