force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>This field is to check what kind of contract type this restaurant is</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01. New - 0% (Rep)</fullName>
            </value>
            <value>
                <fullName>02. New - Commission (Rep)</fullName>
            </value>
            <value>
                <fullName>03. New - Commission (Agency)</fullName>
            </value>
            <value>
                <fullName>04. Re - 0% (Rep)</fullName>
            </value>
            <value>
                <fullName>05. Re - Commission (Rep)</fullName>
            </value>
            <value>
                <fullName>06. Re - Commission (Agency)</fullName>
            </value>
            <value>
                <fullName>07. New - 0% (Etc)</fullName>
            </value>
            <value>
                <fullName>08. New - Commission (Etc)</fullName>
            </value>
            <value>
                <fullName>09. New - Franchise</fullName>
            </value>
            <value>
                <fullName>10. Re - Franchise</fullName>
            </value>
            <value>
                <fullName>11. Re - 0% (Etc)</fullName>
            </value>
            <value>
                <fullName>12. Re - Commission (Etc)</fullName>
            </value>
            <value>
                <fullName>13. Re - Product Change (0%↔Commission)</fullName>
            </value>
            <value>
                <fullName>14. Re - Commission Change</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Product Change</fullName>
            </value>
            <value>
                <fullName>Recontract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>