force-app/main/default/objects/Opportunity/fields/CRM_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date__c</fullName>
    <description>Date when Korean Editorial team puts the CRM date in the backend</description>
    <label>CRM Date</label>
    <type>Date</type>
</CustomField>