force-app/main/default/objects/Opportunity/fields/Delivery_Fee_FixedPerOrder__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fee_FixedPerOrder__c</fullName>
    <description>Migration purposes</description>
    <label>Delivery Fee FixedPerOrder</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>