force-app/main/default/objects/Opportunity/fields/DocuSign_Envelopes_Consumed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelopes_Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DocuSign Envelopes Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>