force-app/main/default/objects/Opportunity/fields/Email_Path__c.field-meta.xml
<CustomField>
    <fullName>Email_Path__c</fullName>
    <label>Email Path</label>
    <length>10</length>
    <type>Text</type>
</CustomField>