force-app/main/default/objects/Opportunity/fields/External_Sales_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Agency__c</fullName>
    <description>This field is to clarify which External Sales Agency is the owner of this contract</description>
    <label>External Sales Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Y001 위져스프리</fullName>
            </value>
            <value>
                <fullName>Y002 조은아파트강동</fullName>
            </value>
            <value>
                <fullName>Y003 윤현기획</fullName>
            </value>
            <value>
                <fullName>Y004 탑유통</fullName>
            </value>
            <value>
                <fullName>Y005 에스에이치테크(SH테크)</fullName>
            </value>
            <value>
                <fullName>Y006 애니원기획</fullName>
            </value>
            <value>
                <fullName>Y007 도남기획</fullName>
            </value>
            <value>
                <fullName>Y008 용오름기획</fullName>
            </value>
            <value>
                <fullName>Y009 디에이치솔루션(DHSOLUTION)</fullName>
            </value>
            <value>
                <fullName>Y010 현대광고연합</fullName>
            </value>
            <value>
                <fullName>Y011 스마트애드</fullName>
            </value>
            <value>
                <fullName>Y012 드림라이프</fullName>
            </value>
            <value>
                <fullName>Y013 국민전화번호부 강동지점</fullName>
            </value>
            <value>
                <fullName>Y014 케이.엠.에스</fullName>
            </value>
            <value>
                <fullName>Y015 드림라이프서울</fullName>
            </value>
            <value>
                <fullName>Y016 아이티기획</fullName>
            </value>
            <value>
                <fullName>Y017 와와소프트</fullName>
            </value>
            <value>
                <fullName>Y018 창조기획(함께가는길)</fullName>
            </value>
            <value>
                <fullName>Y019 드림디자인</fullName>
            </value>
            <value>
                <fullName>Y020 능수기획</fullName>
            </value>
            <value>
                <fullName>Y021 참D&amp;P</fullName>
            </value>
            <value>
                <fullName>Y022 에스디피에이디(SDPAD)</fullName>
            </value>
            <value>
                <fullName>Y023 노랑디자인</fullName>
            </value>
            <value>
                <fullName>Y024 어플천국</fullName>
            </value>
            <value>
                <fullName>Y025 한빛광고기획</fullName>
            </value>
            <value>
                <fullName>Y026 E.G.P편리한생활</fullName>
            </value>
            <value>
                <fullName>Y027 모아넷</fullName>
            </value>
            <value>
                <fullName>Y028 해피라이프</fullName>
            </value>
            <value>
                <fullName>Y029 이배</fullName>
            </value>
            <value>
                <fullName>Y030 플러스기획</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>