force-app/main/default/objects/Opportunity/fields/FixedPerOrder_AU__c.field-meta.xml
<CustomField>
    <fullName>FixedPerOrder_AU__c</fullName>
    <description>For migration only field for fixed per order</description>
    <label>FixedPerOrder</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>