force-app/main/default/objects/Opportunity/fields/Franchise_Partnership_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Partnership_Checklist__c</fullName>
    <description>This field is to check whether all the checkpoints for the franchise partnership is done</description>
    <label>Franchise Partnership Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Doc. for Image use made</fullName>
            </value>
            <value>
                <fullName>All Franchise list received</fullName>
            </value>
            <value>
                <fullName>Announced to Franchise Branches</fullName>
            </value>
            <value>
                <fullName>Business Approval Set</fullName>
            </value>
            <value>
                <fullName>Contact for Partnership</fullName>
            </value>
            <value>
                <fullName>Delivered Proposal Doc.</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>