force-app/main/default/objects/Opportunity/fields/FreeTrial_End_AU__c.field-meta.xml
<CustomField>
    <fullName>FreeTrial_End_AU__c</fullName>
    <description>Free Trial End date for AU, only for Migration</description>
    <label>FreeTrial End AU</label>
    <type>Date</type>
</CustomField>