force-app/main/default/objects/Opportunity/fields/FreeTrial_Start_AU__c.field-meta.xml
<CustomField>
    <fullName>FreeTrial_Start_AU__c</fullName>
    <description>Free Trial Start Date for AU, only for Migration</description>
    <label>FreeTrial Start AU</label>
    <type>Date</type>
</CustomField>