force-app/main/default/objects/Opportunity/fields/Id_Tarif__c.field-meta.xml
<CustomField>
    <fullName>Id_Tarif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Tarif</label>
    <referenceTo>Tarif__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>