force-app/main/default/objects/Opportunity/fields/Installment_migration__c.field-meta.xml
<CustomField>
    <fullName>Installment_migration__c</fullName>
    <label>Installment_migration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>