force-app/main/default/objects/Opportunity/fields/Invoice_Transmission_method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Transmission_method__c</fullName>
    <description>Invoice Transmission method</description>
    <formula>TEXT( Account.Invoice_Transmission_method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Transmission method copied into this field from account</inlineHelpText>
    <label>Invoice Transmission method</label>
    <type>Text</type>
</CustomField>