force-app/main/default/objects/Opportunity/fields/Is_DataLoaded__c.field-meta.xml
<CustomField>
    <fullName>Is_DataLoaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this helps us not to trigger some triggers when it is true</description>
    <label>Is DataLoaded</label>
    <type>Checkbox</type>
</CustomField>