force-app/main/default/objects/Opportunity/fields/Last_Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Comments__c</fullName>
    <description>latest call comments from call log</description>
    <label>Last Call Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>