force-app/main/default/objects/Opportunity/fields/Last_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Log__c</fullName>
    <label>Last Call Log</label>
    <type>TextArea</type>
</CustomField>