force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>This field is to check what kind of lead type this restaurant is - To check whether it is a totally new lead or not</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01. Winback - Contracted Churn</fullName>
            </value>
            <value>
                <fullName>02. Winback - Non-contracted On Platform</fullName>
            </value>
            <value>
                <fullName>03. Normal - Non-contracted On Platform</fullName>
            </value>
            <value>
                <fullName>04. Normal - Lead Research</fullName>
            </value>
            <value>
                <fullName>05. Normal - Sales Coverage Report</fullName>
            </value>
            <value>
                <fullName>06. Normal - Wishlist</fullName>
            </value>
            <value>
                <fullName>07. Similarity - BDMJ</fullName>
            </value>
            <value>
                <fullName>08. Similarity - BDT</fullName>
            </value>
            <value>
                <fullName>09. Not a Lead - Non-contracted On Platform</fullName>
            </value>
            <value>
                <fullName>10. Not a Lead - Contracted On Platform</fullName>
            </value>
            <value>
                <fullName>11. Not a Lead - Not on Platform</fullName>
            </value>
            <value>
                <fullName>Already listed in Yogiyo (Not a lead)</fullName>
            </value>
            <value>
                <fullName>Lead (Target List)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>