force-app/main/default/objects/Opportunity/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This field is to check which level this restaurant is to reflect to Sales reps&apos; performance</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Service A</fullName>
            </value>
            <value>
                <fullName>Service AAA</fullName>
            </value>
            <value>
                <fullName>Service B</fullName>
            </value>
            <value>
                <fullName>Service C</fullName>
            </value>
            <value>
                <fullName>Service D</fullName>
            </value>
            <value>
                <fullName>Service R</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Terminal A</fullName>
            </value>
            <value>
                <fullName>Terminal B</fullName>
            </value>
            <value>
                <fullName>Terminal T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>