force-app/main/default/objects/Opportunity/fields/LineItemsCopied__c.field-meta.xml
<CustomField>
    <fullName>LineItemsCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LineItemsCopied</label>
    <type>Checkbox</type>
</CustomField>