force-app/main/default/objects/Opportunity/fields/List_Photo_Comments__c.field-meta.xml
<CustomField>
    <fullName>List_Photo_Comments__c</fullName>
    <label>List Photo Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>