force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0% Commission Upselling</fullName>
            </value>
            <value>
                <fullName>Auto Closed</fullName>
            </value>
            <value>
                <fullName>Bad debtor</fullName>
            </value>
            <value>
                <fullName>Best Price Guarantee</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Business Temporarily out of service</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Capacity - Competitor</fullName>
            </value>
            <value>
                <fullName>Capacity - Driver Issue</fullName>
            </value>
            <value>
                <fullName>Capacity - Order Volume</fullName>
            </value>
            <value>
                <fullName>Capacity - Own Website</fullName>
            </value>
            <value>
                <fullName>Change of Business Name</fullName>
            </value>
            <value>
                <fullName>Comission too high</fullName>
            </value>
            <value>
                <fullName>Commission Upselling</fullName>
            </value>
            <value>
                <fullName>Contract never received</fullName>
            </value>
            <value>
                <fullName>Decision Maker Not Reached</fullName>
            </value>
            <value>
                <fullName>Delivery Area / MOV</fullName>
            </value>
            <value>
                <fullName>Does not accept Online Payment</fullName>
            </value>
            <value>
                <fullName>Do not Contact</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exclusive with competitor</fullName>
            </value>
            <value>
                <fullName>Franchise Contract - Commission Change</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>High Failure Rate</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Issues with payments to restaurant</fullName>
            </value>
            <value>
                <fullName>Language issues</fullName>
            </value>
            <value>
                <fullName>Legal Form Change</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>