force-app/main/default/objects/Opportunity/fields/Main_Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Main_Commission_Fee__c</fullName>
    <description>Holds the value of the main commission in case there are more than one opportunity line items of type commission on the opportunity. Use case for this is when a user has a trial commission and a normal commission. Used on the Australian quote template</description>
    <label>Main Commission Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>