force-app/main/default/objects/Opportunity/fields/Main_Online_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Main_Online_Payment_Fee__c</fullName>
    <description>Holds the value of the &quot;Online Payment Fee&quot; in case there are more than one opportunity line items of type &quot;Online Payment Fee&quot; on the opportunity. Used in the Australian quote template</description>
    <label>Main Online Payment Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>