force-app/main/default/objects/Opportunity/fields/Main_Order_Transmission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Main_Order_Transmission_Fee__c</fullName>
    <description>Holds the value of the main order transmission fee in case there are more than one opportunity line items of type &quot;order transmission fee&quot; on the opportunity.</description>
    <label>Main Order Transmission Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>