force-app/main/default/objects/Opportunity/fields/MidasAPIException__c.field-meta.xml
<CustomField>
    <fullName>MidasAPIException__c</fullName>
    <label>MidasAPIException</label>
    <length>255</length>
    <type>Text</type>
</CustomField>