force-app/main/default/objects/Opportunity/fields/Migration_List_Addon_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_List_Addon_ID__c</fullName>
    <label>Migration List Addon ID</label>
    <type>TextArea</type>
</CustomField>