force-app/main/default/objects/Opportunity/fields/Migration_List_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_List_Product_ID__c</fullName>
    <description>Migration DE batch</description>
    <label>Migration List Product ID</label>
    <type>TextArea</type>
</CustomField>