force-app/main/default/objects/Opportunity/fields/Migration_Notes_AU__c.field-meta.xml
<CustomField>
    <fullName>Migration_Notes_AU__c</fullName>
    <description>Notes for AU Opportunity Migration</description>
    <label>Migration Notes AU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>