force-app/main/default/objects/Opportunity/fields/Migration_Online_Payment_Subscription_Fe__c.field-meta.xml
<CustomField>
    <fullName>Migration_Online_Payment_Subscription_Fe__c</fullName>
    <description>Migration for field bill.ON: Payment Fee</description>
    <label>Migration Online Payment Subscription Fe</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>