force-app/main/default/objects/Opportunity/fields/Migration_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Migration_Subscription_Fee__c</fullName>
    <description>bill.ON: Subscription Fee migration of field</description>
    <label>Migration Subscription Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>