force-app/main/default/objects/Opportunity/fields/Migration_Subscription_Fee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Subscription_Fee_Start_Date__c</fullName>
    <description>Migration of field Billing: Subscription Fee Start</description>
    <label>Migration Subscription Fee Start Date</label>
    <type>Date</type>
</CustomField>