force-app/main/default/objects/Opportunity/fields/Migration_Subscription_Fee_White_Label__c.field-meta.xml
<CustomField>
    <fullName>Migration_Subscription_Fee_White_Label__c</fullName>
    <description>bill.ON: Whitelabel Fee migration</description>
    <label>Migration Subscription Fee White Label</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>