force-app/main/default/objects/Opportunity/fields/Migration_Take_Away__c.field-meta.xml
<CustomField>
    <fullName>Migration_Take_Away__c</fullName>
    <label>Migration Take Away</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>