force-app/main/default/objects/Opportunity/fields/Migration_White_Label__c.field-meta.xml
<CustomField>
    <fullName>Migration_White_Label__c</fullName>
    <description>bill.ON: Commission Whitelabel % migration</description>
    <label>Migration White Label %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>