force-app/main/default/objects/Opportunity/fields/Migration_White_Label_Price__c.field-meta.xml
<CustomField>
    <fullName>Migration_White_Label_Price__c</fullName>
    <description>bill.ON: Commission Whitelabel Price Migration</description>
    <label>Migration White Label Price</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>