force-app/main/default/objects/Opportunity/fields/MigrationCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>MigrationCreatedBy__c</fullName>
    <label>MigrationCreatedBy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>