force-app/main/default/objects/Opportunity/fields/MigrationStage__c.field-meta.xml
<CustomField>
    <fullName>MigrationStage__c</fullName>
    <label>MigrationStage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>