force-app/main/default/objects/Opportunity/fields/Monthly_Base_Fee_for_9_Cookies__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Fee_for_9_Cookies__c</fullName>
    <description>Migration hidden field</description>
    <label>Migration Billing: Grundgebühr 9Cookies</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>