force-app/main/default/objects/Opportunity/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <description>Next Call Date for Korea</description>
    <label>Next Call Date</label>
    <type>DateTime</type>
</CustomField>