force-app/main/default/objects/Opportunity/fields/Old_SF_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Owner_Id__c</fullName>
    <label>Old_SF_Owner_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>