force-app/main/default/objects/Opportunity/fields/Old_SF_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Record_Id__c</fullName>
    <description>ID of the record from Old SF</description>
    <label>Old SF Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>