force-app/main/default/objects/Opportunity/fields/Onboarding_Formstack_Description__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Formstack_Description__c</fullName>
    <description>Used to store the onboarding menu comments from the owner</description>
    <label>Onboarding Formstack Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>