force-app/main/default/objects/Opportunity/fields/Onboarding_Menu_Comments__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Menu_Comments__c</fullName>
    <label>Onboarding / Menu Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>