force-app/main/default/objects/Opportunity/fields/Online_Payment_Fee_AU__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Fee_AU__c</fullName>
    <description>Online Payment Fee for AU, for migration Only</description>
    <label>Online Payment Fee AU</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>