force-app/main/default/objects/Opportunity/fields/Online_Payment_Fee_perOrder_CD__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Fee_perOrder_CD__c</fullName>
    <label>Online_Payment_Fee_perOrder_CD</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>